--- a/src/AppBundle/Resources/views/adminLayout.html.twig
+++ b/src/AppBundle/Resources/views/adminLayout.html.twig
@@ -13,7 +13,7 @@
             <button class="btn btn-lg btn-default"><a href="{{ path('admin_articles', {"orderBy":"date"}) }}">Articles</a></button>
 
         </div>
-        <div class="col-md-7 col-md-offset-1 col-xs-12 global-marg-up-xs">
+        <div class="col-md-7 col-md-offset-1 col-xs-11 col-xs-offset-1 global-marg-up-xs">
             {% block content %}{% endblock %}
 
         </div>
