Image dont observation valide automatiquement en page d'accueil. Mail administration utilisateurs.

--- a/src/AppBundle/Resources/views/accueil.html.twig
+++ b/src/AppBundle/Resources/views/accueil.html.twig
@@ -87,7 +87,7 @@
 {% endblock %}
 {% block js %}{{ parent() }}
     <script>
-        $(function(){ $('.widget_plus').hide(); });
+       /* $(function(){ $('.widget_plus').hide(); });
         $('.widget_planeto').hide();
         var newForm=  '<p id="statFromPlaneto"> </p><p id="numberOfPlaneto"> '
         $('.widget_planeto').after($(newForm));
@@ -96,7 +96,7 @@
         $('#numberOfPlaneto').text(0);
         $('#Connecte1839').on('change', function(){
             $('#numberOfPlaneto').html($(this));
-        });
+        });*/
     </script>
 
 {% endblock %}
