--- a/src/AppBundle/Resources/views/adminLayout.html.twig
+++ b/src/AppBundle/Resources/views/adminLayout.html.twig
@@ -22,6 +22,11 @@
 
 
 
+    <div class="global-marg-up-xs global-marg">
+        {% include '@App/Popup/PopUpObs.html.twig' with {'idObs':'2', 'id':'mailPop'} %}
+    </div>
+
+
 {% endblock %}
 
 {% block js %}{{ parent() }}{% endblock %}
