--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,7 +8,7 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
         <link href="{{ asset('css/mainStyle.css') }}" rel="stylesheet">
     {% endblock %}
-    <link rel="icon" type="image/x-icon" href="{{ asset('img/fake_logo.svg') }}" />
+    <link rel="icon" type="image/x-icon" href="{{ asset('img/logo_bureau.png') }}" />
 
 </head>
 <body>
@@ -20,7 +20,7 @@
                 <h1>NOS AMIS LES OISEAUX</h1>
                 <h5>France</h5>
                 <p>Depuis 1993</p>
-                <img id="logoDuSite" src="{{ asset('img/2-CNRS.png') }}" alt = "Logo du site: Bird Safari"/>
+                <img id="logoDuSite" src="{{ asset('img/logo_bureau.png') }}" alt = "Logo du site: Bird Safari"/>
 
             </div>
             {% if not is_granted('IS_AUTHENTICATED_FULLY') %}
