--- a/src/AppBundle/Resources/views/Popup/mailPopUp.html.twig
+++ b/src/AppBundle/Resources/views/Popup/mailPopUp.html.twig
@@ -1,29 +1,38 @@
 <!-- id: string identifiant du popup. obligatoire
     title:  string - Title of the pop up.
     content: html content
+    form: bool - Is this a form pop up?
 -->
 
-{% if trigger== "button" %}
+{% if trigger is defined and trigger== "button" %}
     <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#{{ id }}">Open Modal</button>
 {% endif %}
 
 <!-- Modal -->
 <div id="{{ id }}" class="modal fade" role="dialog">
     <div class="modal-dialog">
+        {% if form is defined and form %}
+            {% block form_start %}
+            {% endblock %}
+        {% endif %}
 
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                {% if title %}<h4 class="modal-title">{{ title }}</h4>{% endif %}
+                <h4 class="modal-title">{% block title %}{% endblock %}</h4>
             </div>
             <div class="modal-body">
-            {% if content %}{{ content|raw }}{% else %}No content{% endif %}
+            {% block content %}{% endblock %}
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
             </div>
         </div>
 
+        {% if form is defined and form %}
+            {% block form_end %}
+            {% endblock %}
+        {% endif %}
     </div>
 </div>
