--- a/web/css/special/mission.css
+++ b/web/css/special/mission.css
@@ -1,11 +1,12 @@
 body {
-
+    background-image: url(../../img/backgrounds/fond_mission_bureau.jpg);
+    background-attachment: fixed;
 }
 
 @media screen and (max-width:375px)
 {
     body {
-        background-image: url("/BirdSafari/web/img/backgrounds/fond_mission_mobile.jpg");
+        background-image: url("../backgrounds/fond_mission_mobile.jpg");
         background-attachment: fixed;
 
     }
