--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -142,6 +142,7 @@
 {% block js %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="https://www.w3schools.com/lib/w3.js"></script>
 {% endblock %}
 
 </body>
