--- a/src/AppBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/AppBundle/Resources/views/Registration/register_content.html.twig
@@ -4,13 +4,15 @@
 	{{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
 		<img src="{{ absolute_url(asset('img/fake_logo.svg')) }}" alt="fake_logo" height="50" class="fake_logo">
 		<h1>Inscription</h1><br>
-
+											{# User Informations Fields #}
 			{{ form_row(form.email) }}
 			{{ form_row(form.username) }}
 			{{ form_row(form.plainPassword) }}
 			{{ form_row(form.acceptCgu,{'label':'form.acceptCgu'|trans}) }}
 			{{ form_row(form.newsletterSubscriber,{'label':'form.newsletter_subscriber'|trans}) }}
 			{{ form_row(form.confirmationStatus,{'label':'form.status'|trans} ) }}
+			
+											{# Hidden fields visible if user ask to be a naturalist #}
 			
 			<div class="form-group" id="champsNat">
 				{{ form_row(form.firstName, {'label':'form.first_name'|trans} )}}
@@ -20,7 +22,7 @@
 			</div>
 			
 			<div class="g-recaptcha" data-sitekey="6LeivjIUAAAAANwUBcnp6aM0tsjlua6jPsYoJPZn"></div>
-			<div id="registration_submit">
+			<div class="form-group" id="registrationSubmit">
 				<input  type="submit" value="{{ 'registration.submit'|trans }}"  class="login login-submit"/>
 			</div>
 	{{ form_end(form) }}
