--- a/web/css/userStyle.css
+++ b/web/css/userStyle.css
@@ -25,7 +25,7 @@
     }
     .login-container input[type=text], input[type=password] {
         height: 44px;
-        font-size: 16px;
+        font-size: 12px;
         width: 100%;
         margin-bottom: 10px;
         -webkit-appearance: none;
@@ -49,17 +49,17 @@
         border-radius: 100px;
         color: #fff;
         text-shadow: 0 1px rgba(0,0,0,0.1);
-        background-color: deepskyblue;
+        background-color: #34AFE6;
         padding: 10px 0px;
         font-family: roboto;
         font-size: 20px;
         /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#4787ed)); */
     }
-    .login-submit:hover {
+    .login-submit:hover, .userButton:hover {
         /* border: 1px solid #2f5bb7; */
         border: 0px;
         text-shadow: 0 1px rgba(0,0,0,0.3);
-        background-color: deepskyblue;
+        background-color: #5e6062;
         /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#357ae8)); */
     }
     .login-container a {
@@ -77,19 +77,36 @@
 		display: block;
     }
 
-.userButton{
-	border-radius: 100px;
-	background-color: #4d90fe;
-	height: 44px;
-    width: 100%;
-	color: #ffffff;
-	display: block;
-        
-}
-.fake_logo{
-	float: left;
-}
+	.userButton{
+		border-radius: 100px;
+		background-color: #34AFE6;
+		height: 44px;
+		width: 100%;
+		color: #ffffff;
+		display: block;
 
-.avatar{
-	float: right;
+	}
+	.fake_logo{
+		float: left;
+	}
+
+	.avatar{
+		float: right;
+		border-radius: 100px;
+		border: 3px solid #b9b9b9;
+	}
+ul.userInfos{
+	list-style-type: none;
+    margin: 0;
+    padding: 0;
+	
+}
+.ava{
+		border-radius: 100px;
+		border: 3px solid #b9b9b9;
+	}
+
+/*hide role-specific div html*/
+.confirStatus, .institution {
+display: none;
 }
