Intégration graphique et options de déploiement.

--- a/src/AppBundle/Resources/views/propos.html.twig
+++ b/src/AppBundle/Resources/views/propos.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}{{ parent() }} - Notre Mission{% endblock %}
 {% block css %}{{ parent() }}
-    <link href="{{ asset('css/special/mission.css') }}" rel="stylesheet">
+    <link href="{{ asset('css/mission.css') }}" rel="stylesheet">
 {% endblock %}
 {% block body %}
 
