--- a/src/Birds/ObservationsBundle/Resources/views/Observations/mesObservations.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/mesObservations.html.twig
@@ -162,7 +162,7 @@
                                 "page2" : 1,
                                 "limit2": paramW.limit,
                                 "orderBy2": 3
-                            }) }}">Titre<span class="glyphicon glyphicon glyphicon-chevron-{% if paramW.orderBy == 3 %}down{% else %}right{% endif %}"></span></a></th>
+                            }) }}">Titre<span class="titreTab glyphicon glyphicon glyphicon-chevron-{% if paramW.orderBy == 3 %}down{% else %}right{% endif %}"></span></a></th>
 						<th><a href="{{ path("birds_my_observations", {
                                 "page" : paramV.page,
                                 "limit": paramV.limit,
@@ -357,7 +357,7 @@
 								"page2" : paramW.page,
 								"limit2": paramW.limit,
 								"orderBy2": paramW.orderBy
-							}) }}">Titre<span class="glyphicon glyphicon glyphicon-chevron-{% if paramV.orderBy == 3 %}down{% else %}right{% endif %}"></span></a></th>
+							}) }}">Titre<span class="titreTab glyphicon glyphicon glyphicon-chevron-{% if paramV.orderBy == 3 %}down{% else %}right{% endif %}"></span></a></th>
 						<th><a href="{{ path("birds_my_observations", {
 								"page" : 1,
 								"limit": paramV.limit,
