--- a/src/Birds/ObservationsBundle/Resources/views/Observations/observations.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/observations.html.twig
@@ -254,7 +254,7 @@
                                 "longitude": param.lng,
                                 "radius": param.rad,
 						"orderBy": 3
-                            }) }}">Titre<span class="glyphicon glyphicon glyphicon-chevron-{% if param.orderBy == 3 %}down{% else %}right{% endif %}"></span></a></th>
+                            }) }}">Titre<span class="titreTab glyphicon glyphicon glyphicon-chevron-{% if param.orderBy == 3 %}down{% else %}right{% endif %}"></span></a></th>
 						<th><a href="{{ path("birds_observations", {
                                 "research" : param.research,
                                 "espece" : param.espece, "page" :1,
