--- a/web/css/accueil.css
+++ b/web/css/accueil.css
@@ -1,12 +1,12 @@
 body {
-    background-image: url("/BirdSafari/web/img/backgrounds/fond_accueil_bureau.jpg");
+    background-image: url("../img/backgrounds/fond_accueil_bureau.jpg");
     background-attachment: fixed;
 }
 
 @media screen and (max-width:300px)
 {
     body {
-        background-image: url("/BirdSafari/web/img/backgrounds/fond_accueil_mobile.jpg");
+        background-image: url("../img/backgrounds/fond_accueil_mobile.jpg");
         background-attachment: fixed;
 
     }
