--- a/src/AppBundle/Resources/views/accueil.html.twig
+++ b/src/AppBundle/Resources/views/accueil.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}{{ parent() }} - Accueil{% endblock %}
 {% block css %}{{ parent() }}
-    <link href="{{ asset('css/special/accueil.css') }}" rel="stylesheet">
+    <link href="{{ asset('css/accueil.css') }}" rel="stylesheet">
 {% endblock %}
 {% block body %}
 
