--- a/src/AppBundle/Resources/views/adminLayout.html.twig
+++ b/src/AppBundle/Resources/views/adminLayout.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}{{ parent() }} - Admin{% endblock %}
 {% block css %}{{ parent() }}
-    <link href="{{ asset('css/special/admin.css') }}" rel="stylesheet">
+    <link href="{{ asset('css/admin.css') }}" rel="stylesheet">
 {% endblock %}
 {% block body %}
 
