--- a/web/css/mainStyle.css
+++ b/web/css/mainStyle.css
@@ -2,7 +2,7 @@
 {
     height: 150px;
 
-    background-image: url("/BirdSafari/web/img/backgrounds/fond_articles_bureau.jpg");
+    background-image: url("../img/backgrounds/fond_articles_bureau.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     border-bottom: solid white 1.5px;
@@ -11,7 +11,7 @@
     .banderole
     {
         height: 280px;
-        background-image: url("/BirdSafari/web/img/backgrounds/fond_header_mobile.jpg");
+        background-image: url("../img/backgrounds/fond_header_mobile.jpg");
         background-attachment: fixed;
         border-bottom: solid white 1.5px;
 
@@ -20,7 +20,7 @@
 }
 
 body{
-    background-image: url("/BirdSafari/web/img/backgrounds/fond_accueil_bureau.jpg");
+    background-image: url("../img/backgrounds/fond_accueil_bureau.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
 
