--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,18 +38,19 @@
                     </a>
                 </li>
 
-
-                <li>
-                    <a href="{{ path('article_index') }}" class="text-center">
-                        Blog
-                    </a>
-                </li>
-
                 <li>
                     <a href="{{ path('mission') }}" class="text-center">
                         Notre mission
                     </a>
                 </li>
+                
+                <li>
+                    <a href="{{ path('article_index') }}" class="text-center">
+                        Articles
+                    </a>
+                </li>
+
+
 
                 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                     <li class="dropdown">
