--- a/src/DevTools/BlogBundle/Resources/views/article/edit.html.twig
+++ b/src/DevTools/BlogBundle/Resources/views/article/edit.html.twig
@@ -5,7 +5,11 @@
 
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
-        <input type="submit" value="Modifier" />
+        {% if article.image %}
+        <input type="checkbox" id="keepPic" class="validationRequired" name="keep" checked="checked">Garder l'ancienne image?</input>
+        <img class="col-xs-12" id="oldPic" src="{{ asset(article.image.src) }}" alt="{{ article.image.alt }}"><br>
+        {% endif %}
+        <input type="submit" value="Valider" />
     {{ form_end(edit_form) }}
 
     <ul>
