--- a/src/AppBundle/Resources/views/propos.html.twig
+++ b/src/AppBundle/Resources/views/propos.html.twig
@@ -22,11 +22,12 @@
                         <p>
                             Un proverbe chinois dit que l’homme déplace des montagnes en emportant en premier de petits cailloux.
                             C’est à la lumière de cet ancien adage que le projet “nos amis les oiseaux” est né. La mission et le succès de notre projet dépend de l’union de personnes.
-                            Nous pensons que même si l’Homme peut détruire, il a aussi la faculté de réparer.
+                            Nous pensons que même si l’Homme peut détruire,
                         </p>
                     </div></div>
                 <div class="col-md-3"> <div class="col-md-offset-1 col-md-10">
                         <p>
+                            il a aussi la faculté de réparer.
                             Ce même homme qui a l’humilité de réparer peut également avoir le courage de défendre.
                             Pour faire partie du projet, il suffit de regarder le ciel et de photographier les oiseaux que vous voyez. Avec ce geste simple, vous nous aiderez à localiser les espèces de la région.
                         </p>
@@ -51,17 +52,23 @@
 
                 <div class="col-md-3"> <div class="col-md-offset-1 col-md-10">
                         <p>
-                            De nombreux projets existent en France, où chacun à sa manière peut contribuer à protéger la planète. C’est main dans la main que nous pourrons tous ensemble déplacer la montagne, si grande soit-elle. C’est dans ce sens que nous soutenons aujourd’hui les initiatives de nombreuses autres associations et collectivités.
+                            De nombreux projets existent en France, où chacun à sa manière peut contribuer à protéger la planète.
+                            C’est main dans la main que nous pourrons tous ensemble déplacer la montagne, si grande soit-elle.
+                            C’est dans ce sens que nous soutenons aujourd’hui
                         </p>
 
                     </div></div>
                 <div class="col-md-3"> <div class="col-md-offset-1 col-md-10">
-                        <p>Nos amis les oiseaux aurait peu de sens si l’association n’était pas insérée dans une démarche à plus grande échelle, et nous vous invitons à découvrir toutes les initiatives que nous soutenons en cliquant sur les photos que vous trouverez sur notre site
-                            et en vous inscrivant à notre journal hebdomadaire pour y retrouver chaque semaine une sélection préparée par nos soins.
+                        <p>
+                            les initiatives de nombreuses autres associations et collectivités.
+                            Nos amis les oiseaux aurait peu de sens si l’association n’était pas insérée dans une démarche à plus grande échelle,
+                            et nous vous invitons à découvrir toutes les initiatives que nous soutenons
                         </p>
                     </div></div>
                 <div class="col-md-3"> <div class="col-md-offset-1 col-md-10">
                         <p>
+                            en cliquant sur les photos que vous trouverez sur notre site
+                            et en vous inscrivant à notre journal hebdomadaire pour y retrouver chaque semaine une sélection préparée par nos soins.
                             Construisons ensemble un avenir durable et respectueux de l’environnement.
                         </p>
                     </div></div>
@@ -89,20 +96,22 @@
                 <div class="col-md-3"> <div class="col-md-offset-1 col-md-10">
                         <p>
                             L’association Nos Amis Les Oiseaux travaille en collaboration avec les l’Organisation des Nation Unies, Le WWF et le CNRS sur le projet “Warm global” (réchauffement de la planète),
-                            vaste projet qui identifie les changements climatiques de notre planète.
-                            L’importance de ce partenariat?
+                            vaste projet qui identifie les changements climatiques de notre
+
 
                         </p>
                     </div></div>
                 <div class="col-md-3"> <div class="col-md-offset-1 col-md-10">
                         <p>
+                            planète. L’importance de ce partenariat?
                             C'est grâce à leurs données climatiques que nous pouvons identifier ou même prédire tout changement dans la nature.
-                            Avec l’aide de ces organismes, aujourd’hui nous travaillons pour anticiper, protéger les espèces avant même une possible migration.
+                            Avec l’aide de ces organismes, aujourd’hui nous travaillons pour anticiper, protéger les espèces avant même une possible
                         </p>
                     </div></div>
                 <div class="col-md-3">
                     <div class="col-md-offset-1 col-md-10">
                         <p>
+                             migration.
                             Si vous voulez en savoir plus sur le projet Warm Global cliquez sur l’image inscrivez-vous à notre journal pour avoir
                             accès aux différentes actions entreprises aujourd’hui pour sauvegarder la planète et préserver la biodiversité.
 
@@ -128,40 +137,46 @@
         <div class="row missionRow">
             <div class="col-md-offset-0 col-md-12 col-sm-offset-2 col-sm-8">
                 <h2 class="text-center">Nos membres</h2>
-                <div class="col-md-3">
+                <div class="col-md-3" id="members">
                     {% include '@App/Carousel/carouselTemplate.html.twig' with {
                     'idCar':'3',
                     'slideNumber' : '3',
                     'picArray':[
-                    {'src':"img/notreMission/nos_membres_bureau_1.jpg",'alt':"Directrice des recherches"},
-                    {'src':"img/notreMission/nos_membres_bureau_3.jpg",'alt':"president"},
-                    {'src':"img/notreMission/nos_membres_bureau_2.jpg",'alt':"MVP"}
+                    {'src':"img/notreMission/nos_membres_bureau_1.jpg",'alt':"Directrice des recherches", 'id':'dir'},
+                    {'src':"img/notreMission/nos_membres_bureau_3.jpg",'alt':"president", 'id':'pres'},
+                    {'src':"img/notreMission/nos_membres_bureau_2.jpg",'alt':"MVP", 'id':'mvp'}
                     ],
                     'class':'carousel-little'
                     } %}
                 </div>
-                <div class="col-md-3"> <div class="col-md-offset-1 col-md-10">
-                        <p>
-                            “J’ai rencontré Nicolas Dujardin (le Président de l’association) le 30 novembre 2015 à la conférence de paris sur le climat.
-                            À l’époque, le président de la plus grande puissance au monde soutenait les actions contre le réchauffement climatique et
-                            j'étais chargée de créer des liens avec les associations locales pour créer des actions coordonnées transatlantiques.
-                        </p>
-                    </div></div>
-                <div class="col-md-3"> <div class="col-md-offset-1 col-md-10">
-                        <p>
-                            Les temps ont changé, mais les conséquences sont tous les jours un peu plus visibles.
-                            C’est là que l'idée de Nicolas Dujardin est devenue plus pertinente que jamais.
-                            En alliant nos forces avec Nos Amis les Oiseaux, nous avons la possibilité d’obtenir la plus grande base de données jamais établie au monde sur les conséquences du réchauffement climatique sur les animaux.
-                            Si l'expérience s'avère concluante, nous globaliserons l’action.
-                        </p>
-                    </div></div>
-                <div class="col-md-3"> <div class="col-md-offset-1 col-md-10">
-                        <p>
-                            Tous ensemble nous pouvons construire un monde plus durable et plus respectueux de l’environnement.”
-                            Catherine Decker, Directrice de Recherche.
+                <div id="textWrapMobile">
 
-                        </p>
-                    </div></div>
+
+                    <div class="col-md-3 textContainer" > <div class="col-md-offset-1 col-md-10">
+                            <p id="text1">
+                                “J’ai rencontré Nicolas Dujardin (le Président de l’association) le 30 novembre 2015 à la conférence de paris sur le climat.
+                                À l’époque, le président de la plus grande puissance au monde soutenait les actions contre le réchauffement climatique et
+                                j'étais chargée de créer des liens avec les associations locales pour créer
+                            </p>
+                        </div></div>
+                    <div class="col-md-3"> <div class="col-md-offset-1 col-md-10">
+                            <p id="text2">
+                                des actions coordonnées transatlantiques.
+                                Les temps ont changé, mais les conséquences sont tous les jours un peu plus visibles.
+                                C’est là que l'idée de Nicolas Dujardin est devenue plus pertinente que jamais.
+                                En alliant nos forces avec Nos Amis les Oiseaux, nous avons la possibilité d’obtenir la plus grande base de données jamais
+                            </p>
+                        </div></div>
+                    <div class="col-md-3"> <div class="col-md-offset-1 col-md-10">
+                            <p id="text3">
+                                établie au monde sur les conséquences du réchauffement climatique sur les animaux.
+                                Si l'expérience s'avère concluante, nous globaliserons l’action.
+                                Tous ensemble nous pouvons construire un monde plus durable et plus respectueux de l’environnement.”
+                                Catherine Decker, Directrice de Recherche.
+
+                            </p>
+                        </div></div>
+                </div>
             </div>
         </div>
 
@@ -197,7 +212,8 @@
 {% endblock %}
 
 {% block js %}{{ parent() }}
+    <script src="{{ asset('js/Mission/mission.js') }}"></script>
     {% if not is_granted('IS_AUTHENTICATED_FULLY') %}
-        <script src="{{ asset('js/Mission/mission.js') }}"></script>
+        <script src="{{ asset('js/Mission/popUpAdd.js') }}"></script>
     {% endif %}
 {% endblock %}
