--- a/src/AppBundle/Resources/views/Carousel/carouselTemplate.html.twig
+++ b/src/AppBundle/Resources/views/Carousel/carouselTemplate.html.twig
@@ -6,6 +6,7 @@
                 optionnal values
  class:
  picArray.overflow : boolean for picture to high for slide
+ picArray.id: Adds an id.
  -->
 <div id="myCarousel-{{ idCar }}" class="carousel slide {% if class %}{{ class }}{% endif %}" data-ride="carousel">
     <!-- Indicators -->
@@ -20,7 +21,7 @@
 
         {% set i = 0 %}
         {% for pic in picArray %}
-            <div class="item {% if i == 0 %}active{% endif %}" >
+            <div class="item {% if i == 0 %}active{% endif %}" {% if pic.id is defined %}id="{{ pic.id }}"{% endif %} >
                 <img src="{{asset(pic.src)  }}" {% if pic.overflow is defined %}height="1000" {% endif %} alt="{{ asset(pic.alt) }}" overflow>
             </div>
             {% set i = 1 %}
